# Kea_SOFT_System_Integration_2025_Spring

./: .gitignore  README.adoc
00._Course_Material/00._Meta_Course_Material/: about_the_exam.md  poetry_commands.md
00._Course_Material/01._Assignments/00._Mandatories/: 01._Mandatory_I.md  02._Mandatory_II.md
00._Course_Material/01._Assignments/01._Introduction_Data_Formats/: 00._Install.md  01a._Data_parsing_server_Part_I.md
00._Course_Material/01._Assignments/03._Server_to_server_Real-time_communication_Part_I/: 03a._Data_parsing_server_Part_III.md
00._Course_Material/01._Assignments/04._Server-To-Client/: 04b._Database_granular_data_access.md
00._Course_Material/01._Assignments/06._Client_and_Server_Client-to-Client/: 06b._WebRTC_Example.md
00._Course_Material/01._Assignments/08._Documentation_Client-to-client/: 08a._WebRTC_Example.md
00._Course_Material/01._Assignments/11._CORS_Media/: 11a._Auth_Integration.md
00._Course_Material/01._Assignments/12._Media_II_Webhooks/: 12a._Expose_and_integrate_with_a_webhook_system.md
00._Course_Material/02._Slides/01._Introduction/: 01._introduction.md
00._Course_Material/02._Slides/02._Encoding_And_Modules/: 02._encoding.md  03._virtual_environments_python.md
00._Course_Material/02._Slides/03._Server-Server/: 03._tunneling_tools.md
00._Course_Material/02._Slides/03._Server-To-Server/: 03._tunneling_tools.md
00._Course_Material/02._Slides/04._Server-To-Client/: 01._time.md  02._server-to-client.md
00._Course_Material/02._Slides/08._Documentation_Client-to-client/: 02._client-to-client.md
00._Course_Material/02._Slides/10._Databases/: 01._migrations.md
00._Course_Material/02._Slides/11._CORS_Media/: 01._cors.md  02._media.md
00._Course_Material/02._Slides/12._Media_II_Webhooks/: 01._git_hooks.md  01._webhooks.md  02._webhooks.md
00._Course_Material/02._Slides/13._Packaging_GraphQL_Data_scraping/: 02._graphql.md
02._Text-based_Data_Formats/: me.csv  me.json  me.txt  me.xml  me.yaml
03._Modules/html_classic/: index.html  myModule.js
03._Modules/node_commonjs/: myModule.js
03._Modules/node_esmodules/: myModule.js
03._Modules/python_main/: potential_library.py
03._Modules/python_modules/my_module/: file_one.py
04._Encode_Decode/01._node/: index.js
04._Encode_Decode/02._python/: main.py
05._Python_Virtual_Environments/03._poetry/: pyproject.toml
06._Simple_Servers/01._node/: README.md  app.js
06._Simple_Servers/02._python/: main.py  pyproject.toml
07._TCP_UDP_bonus/: README.md
08._Server-Server/01._node/: app.js
08._Server-Server/02._python/: main.py  pyproject.toml
08._Server-To-Server/01._node/: app.js
08._Server-To-Server/02._python/: pyproject.toml
09._Environment_Variables/02._python/: main.py  pyproject.toml
10._Date/01._node/: index.js
10._Date/02._python/: main.py
11._Short_Polling/01._node/: app.js
11._Short_Polling/01._node/public/: index.html
12._Long_Polling/01._node/: app.js
13._Server-sent_events/01._node/: app.js  package.json
13._Server-sent_events/02._python/: main.py  pyproject.toml
14._WebSocket/01._node/: server.js
14._WebSocket/02._python_plain/: client.py  pyproject.toml  server.py
14._WebSocket/03._python_fastapi/: connection_manager.py  main.py  pyproject.toml
15._OpenAPI/01._node/: app.js  package.json
15._OpenAPI/02._python/: pyproject.toml
15._OpenAPI/02._python/routers/: spacecrafts_router.py
16._WebRTC/01._webrtc_browser_sdp/: index.html
16._WebRTC/02._webrtc_firestore/src/: main.js
17._Database_Migrations/: 20250403101413_mro_migration.js  docker-compose.yml  mydatabase.json  mydatabase_mro_docs.html  mysqldump.sql  pgdump.sql
17._Database_Migrations/01._node_knex/: package.json
17._Database_Migrations/02._python_alembic/: pyproject.toml
18._CORS/01._node/: app.js
18._CORS/02._python/: pyproject.toml
19._Multipart_Forms/01._node/: app.js  package.json
19._Multipart_Forms/02._python/: main.py  pyproject.toml  requirements.txt
22._MPEG-DASH/public/: index.html
27._Web_Scraping_Web_Crawling/01._node/: index.html
