[tool.poetry]
name = "02-python"
version = "0.0.1"
description = "Working with environment variables in python"
authors = ["anderslatif <anderslatif@users.noreply.github.com>"]
package-mode = false
license = "MIT"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
